Scrollbar fixes

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -453,3 +453,13 @@ div.modal-content p:last-of-type {
 }
 
 /* temp */
+
+.disable-scrollbars::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* Chrome/Safari/Webkit */
+}
+
+.disable-scrollbars {
+scrollbar-width: none; /* Firefox */
+-ms-overflow-style: none;  /* IE 10+ */
+}
